--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -108,3 +108,4 @@ RENAME_TO=Rename to {0}
 RETYPE_TO=Change type to {0}
 PACKAGEFRAGMENT_ROOT=PackageFragmentRoot :
 ROOT_PKG=Root Package Name :
+SCAFFOLD_TYPE=Scaffold Type :
