Scaffoldを外から差し込める様にした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@642 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -108,3 +108,4 @@ RENAME_TO=Rename to {0}
 RETYPE_TO=Change type to {0}
 PACKAGEFRAGMENT_ROOT=PackageFragmentRoot :
 ROOT_PKG=Root Package Name :
+SCAFFOLD_TYPE=Scaffold Type :
