ChuraプロジェクトのViewタイプとDaoタイプを拡張ポイントで差し込める様にした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@649 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -427,4 +427,19 @@
 		</handler>
 	</project>
    </extension>
+   <extension
+         point="org.seasar.dolteng.eclipse.projectType">
+      <viewtype
+            id="org.seasar.view.teeda"
+            name="Teeda"/>
+      <viewtype
+            id="org.seasar.view.flex2"
+            name="Flex2"/>
+      <daotype
+            id="org.seasar.dao.kuina-dao"
+            name="Kuina-Dao"/>
+      <daotype
+            id="org.seasar.dao.s2dao"
+            name="S2Dao"/>
+   </extension>
 </plugin>
