--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.0"?>
 <plugin>
    <extension-point id="scaffold" name="scaffold" schema="schema/scaffold.exsd"/>
+   <extension-point id="projectType" name="projectType" schema="schema/projectType.exsd"/>
    <extension
          point="org.eclipse.ui.propertyPages">
       <page
