--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -60,6 +60,7 @@ PREFERENCE_SOURCE_PATH=SourcePath
 PREFERENCE_RESOURCE_PATH=ResourcePath
 PREFERENCE_WEB_SERVER=WebServer
 PREFERENCE_FLEX_SRC_FOLDER=Flex Source Path
+PREFERENCE_IS_HELP_REMOTE=Use Remote Help
 BROWSE=Bro&wse...
 MODIFY=Modify...
 DELETE=Delete...
