git-svn-id: https://www.seasar.org/svn/chura/trunk@664 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin.properties
@@ -14,7 +14,7 @@
 # governing permissions and limitations under the License.
 ###############################################################################
 plugin.author=the Seasar Foundation
-plugin.brand=Dolteng Eclipse Plugin
+plugin.brand=Dolteng Document Plugin
 
 openPagePair.label=Open Page Pair
 openActionPair.label=Open Action Pair
