git-svn-id: https://www.seasar.org/svn/chura/trunk@665 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin.properties
@@ -16,9 +16,5 @@
 plugin.author=the Seasar Foundation
 plugin.brand=Dolteng Document Plugin
 
-openPagePair.label=Open Page Pair
-openActionPair.label=Open Action Pair
-createService.label=Create Service
-openDaoPair.label=Open Dao Pair
-openEntityPair.label=Open Entity Pair
 teedaExtensionHelp.label=View Teeda Extension Help
+teedaComponentHelp.label=View Teeda Component Help
