git-svn-id: https://www.seasar.org/svn/chura/trunk@667 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.xml
+++ b/dolteng/org.seasar.dolteng.docs/plugin.xml
@@ -161,7 +161,7 @@
       </objectContribution>
       <objectContribution
             adaptable="true"
-            id="org.seasar.dolteng.eclipse.dicon.smartdeployconfig.objectContribution"
+            id="org.seasar.dolteng.eclipse.dicon.dbcp.objectContribution"
             nameFilter="*.dicon"
             objectClass="org.eclipse.core.resources.IFile">
          <menu
