--- a/dolteng/org.seasar.dolteng.scaffold/build.properties
+++ b/dolteng/org.seasar.dolteng.scaffold/build.properties
@@ -1,5 +1,15 @@
-source.. = src/main/java/
 output.. = target/classes/
 bin.includes = META-INF/,\
-               .,\
-               plugin.xml
+               plugin.xml,\
+               dolteng-scaffold.jar,\
+               plugin_ja.properties,\
+               plugin.properties,\
+               template/
+source.dolteng-scaffold.jar = src/main/java/,\
+                              target/classes/
+output.dolteng-scaffold.jar = bin/
+src.includes = template/,\
+               plugin_ja.properties,\
+               plugin.xml,\
+               plugin.properties,\
+               META-INF/
