S2Daoのマニュアルをコンテキストメニューから見られる様にした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@678 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin.properties
@@ -22,3 +22,4 @@ s2containerAllHelp.label=View S2Container Document List
 smartdeployHelp.label=View SmartDeploy Help
 smartdeployConfigHelp.label=View SmartDeploy Config Help
 dbcpHelp.label=View Connection Pooling Help
+s2DaoHelp.label=View S2Dao Help
