--- a/dolteng/org.seasar.dolteng.docs/plugin.xml
+++ b/dolteng/org.seasar.dolteng.docs/plugin.xml
@@ -20,6 +20,9 @@
                <objectState
                      name="projectNature"
                      value="org.seasar.dolteng.eclipse.nature"/>
+               <objectState
+                     name="projectPersistentProperty"
+                     value="org.seasar.dolteng.eclipse.ViewType=Teeda"/>
                <or>
                   <objectState
                         name="name"
@@ -50,9 +53,14 @@
             <groupMarker name="additions2"/>
          </menu>
          <visibility>
-            <objectState
-                  name="projectNature"
-                  value="org.seasar.dolteng.eclipse.nature"/>
+            <and>
+	            <objectState
+	                  name="projectNature"
+	                  value="org.seasar.dolteng.eclipse.nature"/>
+	            <objectState
+	                  name="projectPersistentProperty"
+	                  value="org.seasar.dolteng.eclipse.ViewType=Teeda"/>
+            </and>
          </visibility>
          <action
                class="org.seasar.dolteng.docs.action.TeedaComponentHelpAction"
@@ -188,6 +196,43 @@
                icon="icons/help_contents.gif"
                id="org.seasar.dolteng.eclipse.viewer.DbcpHelpAction"
                label="%dbcpHelp.label"
+               menubarPath="org.seasar.dolteng.eclipse.menu/additions2"/>
+      </objectContribution>
+      <objectContribution
+            adaptable="true"
+            id="org.seasar.dolteng.eclipse.kuina.objectContribution"
+            nameFilter="*.java"
+            objectClass="org.eclipse.core.resources.IFile">
+         <menu
+               id="org.seasar.dolteng.eclipse.menu"
+               label="Dolteng"
+               path="additions">
+            <groupMarker name="additions"/>
+            <groupMarker name="additions2"/>
+         </menu>
+         <visibility>
+            <and>
+               <objectState
+                     name="projectNature"
+                     value="org.seasar.dolteng.eclipse.nature"/>
+               <objectState
+                     name="projectPersistentProperty"
+                     value="org.seasar.dolteng.eclipse.DaoType=S2Dao"/>
+               <or>
+                  <objectState
+                        name="name"
+                        value="*Dao.java"/>
+                  <objectState
+                        name="name"
+                        value="*/entity/*"/>
+               </or>
+            </and>
+         </visibility>
+         <action
+               class="org.seasar.dolteng.docs.action.S2DaoHelpAction"
+               icon="icons/help_contents.gif"
+               id="org.seasar.dolteng.eclipse.viewer.S2DaoHelpAction"
+               label="%s2DaoHelp.label"
                menubarPath="org.seasar.dolteng.eclipse.menu/additions2"/>
       </objectContribution>
    </extension>
