Kuina-Daoのドキュメントを見られる様にした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@680 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin.properties
@@ -23,3 +23,5 @@ smartdeployHelp.label=View SmartDeploy Help
 smartdeployConfigHelp.label=View SmartDeploy Config Help
 dbcpHelp.label=View Connection Pooling Help
 s2DaoHelp.label=View S2Dao Help
+kuinaDaoAllHelp.label=View Kuina-Dao All UserGuide
+kuinaDaoHelp.label=View Kuina-Dao Help
