S2Flex2のドキュメントも見られる様にしたが、かなりイマイチ。機能を開放するか微妙。
git-svn-id: https://www.seasar.org/svn/chura/trunk@682 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin.properties
@@ -25,3 +25,4 @@ dbcpHelp.label=View Connection Pooling Help
 s2DaoHelp.label=View S2Dao Help
 kuinaDaoAllHelp.label=View Kuina-Dao All UserGuide
 kuinaDaoHelp.label=View Kuina-Dao Help
+s2Flex2AllHelp.label=View S2Flex2 Document List
