--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -54,6 +54,7 @@ PREFERENCE_VIEW_TYPE=View Type :
 PREFERENCE_DAO_TYPE=Dao Type :
 PREFERENCE_USE_PAGE_MARKER=Use Page Marker
 PREFERENCE_USE_DI_MARKER=Use DI Marker
+PREFERENCE_USE_SQL_MARKER=Use Sql Marker
 PREFERENCE_DEFAULT_ROOT_PKG=Default Root Package
 PREFERENCE_ORM_XML_PATH=OrmXmlPath
 PREFERENCE_SOURCE_PATH=SourcePath
@@ -94,7 +95,7 @@ WIZARD_PAGE_TABLE_MAPPING=Table mapping
 WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
 WIZARD_BASE_PAGE=Create Or Update Base Class
 WIZARD_PAGE_DTO_FIELD_SELECTION=Edit Dto fields
-JUMP_TO_HTML=Jump to {0}
+JUMP_TO=Jump to {0}
 JUMP_TO_CLASS=Jump to {0}#{1}
 ACTION_SCAFFOLD_CREATION=Generate Scaffold Application
 ADD_DYNAMIC_PROPERTY_SELECT_ATTRIBUTE=Select Attributes to add Dynamic Properties
