--- a/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
+++ b/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
@@ -137,32 +137,32 @@
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-extension</artifactId>
-			<version>2.4.13</version>
+			<version>2.4.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-framework</artifactId>
-			<version>2.4.13</version>
+			<version>2.4.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-tiger</artifactId>
-			<version>2.4.13</version>
+			<version>2.4.17</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-extension</artifactId>
-			<version>1.0.7</version>
+			<version>1.0.11-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-ajax</artifactId>
-			<version>1.0.7</version>
+			<version>1.0.11-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-tiger</artifactId>
-			<version>1.0.7</version>
+			<version>1.0.11-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
@@ -182,7 +182,7 @@
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.0.20070304</version>
+			<version>1.0.20070802</version>
 		</dependency>
 	</dependencies>
 </project>
